[BUGFIX] Fix login error message not translated
The major reason of this issue is that lodestar-app-element handle the
error instead of throw.
After update element package, make it throw the error directly, we could
get the error message and handle it as our expected.

--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -376,12 +376,64 @@
   "checkout.form.radio.coupon.use": " Sử dụng Phiếu giảm giá ",
   "checkout.form.radio.memberCard.use": " Sử dụng Thẻ Thành viên ",
   "checkout.modal.title.memberCard.choose": " Chọn thẻ thành viên ",
-  "code.E_EMAIL_EXISTS": " Email đã tồn tại ",
-  "code.E_INPUT": " Dữ liệu đầu vào không chính xác ",
-  "code.E_PAYMENT_PROCEED": "tiến trình thanh toán bị lỗi",
-  "code.E_SEND_EMAIL": " Không gửi được email ",
-  "code.E_USERNAME_EXISTS": " Tên người dùng đã tồn tại ",
-  "code.SUCCESS": " Thành công ",
+  "code.E_BIND_CREDIT_CARD": "Lỗi khi ràng buộc thẻ tín dụng",
+  "code.E_CHECKOUT_ORDER": "Lỗi thanh toán",
+  "code.E_CHECK_PRODUCT_VALID": "product is invalid",
+  "code.E_COIN_INCLUDED": "無法建立含有代幣的交易，請移除該項目",
+  "code.E_CW_SERVICE": "Trang thanh toán nhập CW không thành công",
+  "code.E_CW_SETUP": "Thiết lập môi trường CW không thành công",
+  "code.E_DELIVER_PRODUCTS": "E_DELIVER_PRODUCTS",
+  "code.E_DUPLICATED_EXCHANGE": "discount already exchange",
+  "code.E_EMAIL_EXISTS": "Email đã tồn tại",
+  "code.E_EXCHANGE_CODE": "Không thể thêm phiếu giảm giá này",
+  "code.E_GET_MEMBER": "Không thể tải người dùng",
+  "code.E_HANDLE_TRIGGER": "E_HANDLE_TRIGGER",
+  "code.E_INPUT": "Dữ liệu đầu vào không chính xác",
+  "code.E_INSERT_QUEUE": "E_INSERT_QUEUE",
+  "code.E_INVALID_PAYMENT_METHOD": "Phương thức thanh toán này không hợp lệ",
+  "code.E_ISSUE_INVOICE": "Lỗi hóa đơn",
+  "code.E_LIST_ZOOM_USER": "E_LIST_ZOOM_USER",
+  "code.E_LOGOUT": "Lỗi đăng xuất",
+  "code.E_MPG_SERVICE": "E_MPG_SERVICE",
+  "code.E_NOT_ENOUGH_COINS": "代幣不足，無法建立交易",
+  "code.E_NO_APP_HOST": "E_NO_APP_HOST",
+  "code.E_NO_CODE": "Số sê-ri phiếu thưởng không chính xác",
+  "code.E_NO_EMAIL": "Không tìm thấy email",
+  "code.E_NO_MEMBER": "Không thể tìm thấy người dùng",
+  "code.E_NO_ORDER": "Không thể tìm thấy đơn đặt hàng",
+  "code.E_NO_PAYMENT": "Không thể tìm thấy hồ sơ thanh toán",
+  "code.E_NO_PAYMENT_METHOD": "Không tìm thấy phương thức thanh toán",
+  "code.E_NO_PRICE": "零元訂單無法建立交易",
+  "code.E_NO_PRODUCT": "product does not exist",
+  "code.E_ORDER_STATUS": "訂單已被限制，請重新下單",
+  "code.E_OUTDATED_CODE": "Phiếu thưởng đã hết hạn",
+  "code.E_PASSWORD": "Mật khẩu sai",
+  "code.E_PAYMENT_GATEWAY": "E_PAYMENT_GATEWAY",
+  "code.E_PAYMENT_LIMIT": "付款次數已達十次上限，請建立新訂單",
+  "code.E_PAYMENT_PROCEED": "payment proceed is error",
+  "code.E_PAYPAL_CAPTURE": "Thanh toán PAYPAL không thành công",
+  "code.E_PAYPAL_EXEC": "PAYPAL không thực hiện được thao tác",
+  "code.E_PAYPAL_ORDER": "PAYPAL không tạo được thanh toán",
+  "code.E_PAY_TPCLIENT": "Thanh toán bằng thẻ tín dụng không thành công, vui lòng nhập lại số thẻ",
+  "code.E_PRODUCT_SESSION_OUTDATE": "session is outdated",
+  "code.E_PROVIDER": "E_PROVIDER",
+  "code.E_PROVIDER_TOKEN": "E_PROVIDER_TOKEN",
+  "code.E_REDEEM": "Không nhận được",
+  "code.E_REFUND": "Không hoàn lại được tiền",
+  "code.E_REGISTER_MEMBER": "Lỗi khi đăng ký người dùng",
+  "code.E_RESET_PASSWORD_TOKEN": "Liên kết đã hết hạn",
+  "code.E_SEND_EMAIL": "Không gửi được email",
+  "code.E_SETUP_PAYPAL": "Thiết lập môi trường Paypal không thành công",
+  "code.E_SETUP_TPCLIENT": "E_SETUP_TPCLIENT",
+  "code.E_SIGN_URL": "E_SIGN_URL",
+  "code.E_SPGATEWAY_NOTIFY": "E_SPGATEWAY_NOTIFY",
+  "code.E_UNKNOWN": "Lỗi không xác định",
+  "code.E_UPDATE_ORDER_STATUS": "E_UPDATE_ORDER_STATUS",
+  "code.E_UPDATE_PASSWORD": "Lỗi cập nhật mật khẩu",
+  "code.E_USERNAME_EXISTS": "Tên người dùng đã tồn tại",
+  "code.E_VALIDATE_CREDIT_CARD": "Lỗi xác minh thẻ tín dụng",
+  "code.E_ZOOM_SECRET": "E_ZOOM_SECRET",
+  "code.SUCCESS": "Thành công",
   "common.MetaProductDeletionBlock.back": "back",
   "common.MetaProductDeletionBlock.delete": "delete",
   "common.MetaProductDeletionBlock.deleteConfirmation": "{metaProduct}一經刪除即不可恢復，確定要刪除嗎？",
@@ -1645,6 +1697,7 @@
   "page.CertificateSelector.selectTemplate": "select template",
   "page.CouponCollectionBlock.emptyCouponPlan": "無任何折價方案",
   "page.CouponCollectionBlock.showMore": "顯示更多",
+  "page.CouponPlanCollectionAdminPage.searchPlaceholder": "搜尋折扣代碼或折價券名稱",
   "page.ProgramPackageProcessBlock.allProgramPackage": "Tất cả các khóa học",
   "page.ProgramPackageProcessBlock.chooseProgramPackage": "選擇課程",
   "page.ProgramPackageProcessBlock.chooseProgramPackageCategory": "Chọn Phân loại kết hợp khóa học",
@@ -1710,6 +1763,7 @@
   "page.VenueSeatSetting.row": "橫列",
   "page.VenueSeatSetting.rows": "橫的行數",
   "page.VenueSeatSetting.walkway": "走道",
+  "page.VoucherPlanCollectionAdminPage.searchPlaceholder": "搜尋兌換代碼或兌換券名稱",
   "page.VoucherPlanCollectionBlock.ditVoucherPlan": "編輯兌換方案",
   "page.VoucherPlanCollectionBlock.edit": "編輯",
   "page.VoucherPlanCollectionBlock.emptyVoucherPlan": "無任何兌換方案",
