--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -376,11 +376,63 @@
   "checkout.form.radio.coupon.use": "使用折價券",
   "checkout.form.radio.memberCard.use": "使用會員卡",
   "checkout.modal.title.memberCard.choose": "選擇會員卡",
+  "code.E_BIND_CREDIT_CARD": "綁定信用卡錯誤",
+  "code.E_CHECKOUT_ORDER": "結帳錯誤",
+  "code.E_CHECK_PRODUCT_VALID": "product is invalid",
+  "code.E_COIN_INCLUDED": "無法建立含有代幣的交易，請移除該項目",
+  "code.E_CW_SERVICE": "CW 導入付款頁失敗",
+  "code.E_CW_SETUP": "CW 環境設定失敗",
+  "code.E_DELIVER_PRODUCTS": "E_DELIVER_PRODUCTS",
+  "code.E_DUPLICATED_EXCHANGE": "此序號已被重複加入",
   "code.E_EMAIL_EXISTS": "電子信箱已存在",
+  "code.E_EXCHANGE_CODE": "無法加入該折扣",
+  "code.E_GET_MEMBER": "無法取得使用者",
+  "code.E_HANDLE_TRIGGER": "E_HANDLE_TRIGGER",
   "code.E_INPUT": "輸入資料有誤",
+  "code.E_INSERT_QUEUE": "E_INSERT_QUEUE",
+  "code.E_INVALID_PAYMENT_METHOD": "該付款方式無效",
+  "code.E_ISSUE_INVOICE": "開立發票錯誤",
+  "code.E_LIST_ZOOM_USER": "E_LIST_ZOOM_USER",
+  "code.E_LOGOUT": "登出錯誤",
+  "code.E_MPG_SERVICE": "E_MPG_SERVICE",
+  "code.E_NOT_ENOUGH_COINS": "代幣不足，無法建立交易",
+  "code.E_NO_APP_HOST": "E_NO_APP_HOST",
+  "code.E_NO_CODE": "無此序號",
+  "code.E_NO_EMAIL": "找不到信箱",
+  "code.E_NO_MEMBER": "找不到該使用者",
+  "code.E_NO_ORDER": "找不到該訂單",
+  "code.E_NO_PAYMENT": "找不到該付款紀錄",
+  "code.E_NO_PAYMENT_METHOD": "找不到該付款方式",
+  "code.E_NO_PRICE": "零元訂單無法建立交易",
+  "code.E_NO_PRODUCT": "product does not exist",
+  "code.E_ORDER_STATUS": "訂單已被限制，請重新下單",
+  "code.E_OUTDATED_CODE": "此序號已過期",
+  "code.E_PASSWORD": "密碼錯誤",
+  "code.E_PAYMENT_GATEWAY": "E_PAYMENT_GATEWAY",
+  "code.E_PAYMENT_LIMIT": "付款次數已達十次上限，請建立新訂單",
   "code.E_PAYMENT_PROCEED": "payment proceed is error",
+  "code.E_PAYPAL_CAPTURE": "PAYPAL請款失敗",
+  "code.E_PAYPAL_EXEC": "PAYPAL執行操作失敗",
+  "code.E_PAYPAL_ORDER": "PAYPAL建立付款失敗",
+  "code.E_PAY_TPCLIENT": "信用卡付款失敗請重新輸入卡號",
+  "code.E_PRODUCT_SESSION_OUTDATE": "產品場次已過期",
+  "code.E_PROVIDER": "E_PROVIDER",
+  "code.E_PROVIDER_TOKEN": "E_PROVIDER_TOKEN",
+  "code.E_REDEEM": "接收失敗",
+  "code.E_REFUND": "退款失敗",
+  "code.E_REGISTER_MEMBER": "註冊使用者錯誤",
+  "code.E_RESET_PASSWORD_TOKEN": "連結已失效",
   "code.E_SEND_EMAIL": "寄送信件失敗",
+  "code.E_SETUP_PAYPAL": "Paypal 環境設定失敗",
+  "code.E_SETUP_TPCLIENT": "E_SETUP_TPCLIENT",
+  "code.E_SIGN_URL": "E_SIGN_URL",
+  "code.E_SPGATEWAY_NOTIFY": "E_SPGATEWAY_NOTIFY",
+  "code.E_UNKNOWN": "未知錯誤",
+  "code.E_UPDATE_ORDER_STATUS": "E_UPDATE_ORDER_STATUS",
+  "code.E_UPDATE_PASSWORD": "更新密碼錯誤",
   "code.E_USERNAME_EXISTS": "使用者名稱已存在",
+  "code.E_VALIDATE_CREDIT_CARD": "信用卡驗證錯誤",
+  "code.E_ZOOM_SECRET": "E_ZOOM_SECRET",
   "code.SUCCESS": "成功",
   "common.MetaProductDeletionBlock.back": "返回",
   "common.MetaProductDeletionBlock.delete": "刪除",
@@ -1645,6 +1697,7 @@
   "page.CertificateSelector.selectTemplate": "select template",
   "page.CouponCollectionBlock.emptyCouponPlan": "無任何折價方案",
   "page.CouponCollectionBlock.showMore": "顯示更多",
+  "page.CouponPlanCollectionAdminPage.searchPlaceholder": "搜尋折扣代碼或折價券名稱",
   "page.ProgramPackageProcessBlock.allProgramPackage": "全部課程組合",
   "page.ProgramPackageProcessBlock.chooseProgramPackage": "選擇課程",
   "page.ProgramPackageProcessBlock.chooseProgramPackageCategory": "選擇課程組合分類",
@@ -1710,6 +1763,7 @@
   "page.VenueSeatSetting.row": "橫列",
   "page.VenueSeatSetting.rows": "橫的行數",
   "page.VenueSeatSetting.walkway": "走道",
+  "page.VoucherPlanCollectionAdminPage.searchPlaceholder": "搜尋兌換代碼或兌換券名稱",
   "page.VoucherPlanCollectionBlock.ditVoucherPlan": "編輯兌換方案",
   "page.VoucherPlanCollectionBlock.edit": "編輯",
   "page.VoucherPlanCollectionBlock.emptyVoucherPlan": "無任何兌換方案",
