[BUGFIX] add translations

--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -2411,14 +2411,20 @@
   "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
   "form.GiftPlanInput.pleaseCreateGiftPlan": "請新增贈品方案",
   "craft.label.generalSettings": "一般設定",
-  "craft.label.pageTitle": "Page Title",
-  "craft.label.seoDescription": "description",
-  "craft.label.keywords": "keywords",
-  "craft.label.seoSettings": "SEO 設定",
+  "common.label.pageTitle": "Page Title",
+  "common.label.seoDescription": "description",
+  "common.label.keywords": "keywords",
+  "common.label.seoSettings": "SEO 設定",
   "order.label.gift": "贈品項目",
   "order.label.recipientName": "收件人",
   "order.label.recipientPhone": "收件電話",
   "order.label.recipientAddress": "收件地址",
   "common.ui.hasGiftPlan": "附贈品",
-  "common.unit.monthWithQuantifier": "個月"
+  "common.unit.monthWithQuantifier": "個月",
+  "common.label.openGraphSettings": "Open Graph 設定",
+  "common.label.ogTitle": "og:title",
+  "common.label.ogDescription": "og:description",
+  "common.label.ogImage": "og:image",
+  "common.label.ogImageAlt": "og:image:alt",
+  "common.placeholder.useCommaToSeparateKeywords": "關鍵字需以「 , 」做為區隔"
 }
