--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -2448,5 +2448,10 @@
   "project.ProjectAdminPage.deletePortfolio": "刪除作品",
   "project.*.portfolioTitle": "名稱",
   "admin.AdminMenu.projectRole": "角色管理",
-  "common.menu.roleManagement": "角色管理"
+  "common.menu.roleManagement": "角色管理",
+  "common.label.participant": "參與者",
+  "common.ui.addParticipant": "新增參與者",
+  "common.label.selectParticipant": "選擇參與者",
+  "common.label.participantPosition": "職位",
+  "common.ui.editParticipant": "編輯參與者"
 }
