[FEATURE] add protfolio project publish block

--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -2126,14 +2126,14 @@
   "project.label.unPublished": "停售，此方案暫停對外銷售，並從專案中隱藏",
   "project.text.introductionDefaultNotice": "預設顯示在手機版與電腦版的圖文內容",
   "project.text.introductionDesktopNotice": "優先顯示在電腦版的圖文內容，若與「預設」一樣可留空",
-  "project.text.noSalePlan": "尚未訂定募資條件",
-  "project.text.noShippingDays": "尚未訂定售價",
-  "project.text.noShopTitle": "尚未設定專案名稱",
-  "project.text.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可發佈你的專案。",
-  "project.text.publishedNotation": "現在你的專案已發佈，此專案會出現在頁面上。",
-  "project.text.unpublishedNotation": "你的專案未發佈，此專案並不會顯示在頁面上。",
-  "project.ui.activateShop": "發佈專案",
-  "project.ui.closeShop": "取消發佈",
+  "project.ProjectPublishAdminBlock.noSalePlan": "尚未訂定募資條件",
+  "project.ProjectPublishAdminBlock.noSalePrice": "尚未訂定售價",
+  "project.ProjectPublishAdminBlock.noShopTitle": "尚未設定專案名稱",
+  "project.ProjectPublishAdminBlock.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可發佈你的專案。",
+  "project.ProjectPublishAdminBlock.publishedNotation": "現在你的專案已發佈，此專案會出現在頁面上。",
+  "project.ProjectPublishAdminBlock.unpublishedNotation": "你的專案未發佈，此專案並不會顯示在頁面上。",
+  "project.ProjectPublishAdminBlock.activateShop": "發佈專案",
+  "project.ProjectPublishAdminBlock.closeShop": "取消發佈",
   "project.ui.saveProjectPlan": "儲存方案",
   "promotion.event.successfullyRevoked": "收回成功",
   "promotion.label.amount": "數量",
@@ -2453,5 +2453,12 @@
   "common.ui.addParticipant": "新增參與者",
   "common.label.selectParticipant": "選擇參與者",
   "common.label.participantPosition": "職位",
-  "common.ui.editParticipant": "編輯參與者"
+  "common.ui.editParticipant": "編輯參與者",
+  "common.label.portfolioPublishSettings": "上架設定",
+  "project.ProjectPublishAdminBlock.noAuthor": "作者不可為空",
+  "project.ProjectPublishAdminBlock.notCompletePortfolioNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
+  "project.ProjectPublishAdminBlock.unpublishedPortfolioNotation": "你的作品未發佈，此作品並不會顯示在頁面上。",
+  "project.ProjectPublishAdminBlock.publishedPortfolioNotation": "現在你的作品已發佈，此作品會出現在頁面上。",
+  "project.ProjectPublishAdminBlock.activateNow": "立即發布",
+  "common.text.unpublishingWarning": "將下架且不會出現在列表，已擁有權益的會員仍然可以看到內容。"
 }
