[REFACTOR] program plan translation

--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -733,7 +733,7 @@
   "common.product.program": "Chương trình",
   "common.product.programContent": "Chương trình",
   "common.product.programPackagePlan": "Gói chương trình",
-  "common.product.programPlan": "Chương trình",
+  "common.product.programPlan": "Chương trình giảng dạy",
   "common.product.projectPlan": "Dự án",
   "common.product.specificItem": " Mục được Chỉ định ",
   "common.product.unknownType": "Không xác định",
