--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -733,7 +733,7 @@
   "common.product.program": "单次课程",
   "common.product.programContent": "课程内容",
   "common.product.programPackagePlan": "课程组合",
-  "common.product.programPlan": "订阅课程",
+  "common.product.programPlan": "课程方案",
   "common.product.projectPlan": "专案方案",
   "common.product.specificItem": "指定项目",
   "common.product.unknownType": "未知",
