--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -733,7 +733,7 @@
   "common.product.program": "單次課程",
   "common.product.programContent": "課程內容",
   "common.product.programPackagePlan": "課程組合",
-  "common.product.programPlan": "訂閱課程",
+  "common.product.programPlan": "課程方案",
   "common.product.projectPlan": "專案方案",
   "common.product.specificItem": "指定項目",
   "common.product.unknownType": "未知",
